<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Circle Menu</string>
    <string name="hello_world">Hello world!</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google">Google</string>
    <string name="linkedin">LinkedIn</string>
    <string name="wordpress">Wordpress</string>
    <string name="myspace">Myspace</string>
    <string name="start_app">Starting application:</string>

</resources>